[tool.poetry]
name = "yarnyml"
version = "0.1.0"
description = ""
authors = ["palindrome6 <nitinnarayan1501@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
